Fixed some highlighting overlapping bugs

--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -1,9 +1,14 @@
+body {
+    background-color: #1e1e1e;
+}
+
 .application-container {
     display: flex;
     margin: 0 auto;
     height: 100dvh;
     justify-content: center;
     align-items: center;
+    background-color: #1e1e1e;
 }
 
 .assembly-container,
@@ -32,8 +37,14 @@
 }
 
 .cm-editor {
-  outline: none !important;
-  width: 100%;
+    outline: none !important;
+    width: 100%;
+    background-color: #1e1e1e !important;
+    color: #D4D4D4;
+}
+
+.cm-gutter {
+    background-color: #1e1e1e;
 }
 
 .commentHighlight {
